removed the background image and simplified the code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
       <img src="./images/Profile_Pic.jpg" class="prof-pic">
 
     <h2> My Story </h2>
-    <p> I'm a software developer at Blue Cross Blue Shield.
-      This is my third class in HES.</p>
+    <p> I’m a professional software developer and tech enthusiast.
+      I like to solve problems using technology,
+      learn new tools and stay on the edge.
+      Currently, I work full time and pursuing my software engineering degree at HES.
+       I love to travel, try different cuisines and learn to speak different languages.
+       I’ve traveled to the most parts of the continental US, Asia and Europe.
+        I can speak in six different languages.</p>
     </div>
 </body>
 </html>
