--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img src="./images/Profile_Pic.jpg" class="prof-pic">
 
     <h2> My Story </h2>
-    <p> I’m a professional software developer and tech enthusiast.
+    <p> I am a professional software developer and tech enthusiast.
       I like to solve problems using technology,
       learn new tools and stay on the edge.
       Currently, I work full time and pursuing my software engineering degree at HES.
