--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       learn new tools and stay on the edge.
       Currently, I work full time and pursuing my software engineering degree at HES.
        I love to travel, try different cuisines and learn to speak different languages.
-       I’ve traveled to the most parts of the continental US, Asia and Europe.
+       I have traveled to the most parts of the continental US, Asia and Europe.
         I can speak in six different languages.</p>
     </div>
 </body>
