added php qoute

--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="css/master.css">
-</head>
-<body>
-
-    <div class="prof-box">
-      <h1> Asmat Muradi</h><br>
-      <img src="./images/Profile_Pic.jpg" class="prof-pic">
-
-    <h2> My Story </h2>
-    <p> I am a professional software developer and tech enthusiast.
-      I like to solve problems using technology,
-      learn new tools and stay on the edge.
-      Currently, I work full time and pursuing my software engineering degree at HES.
-       I love to travel, try different cuisines and learn to speak different languages.
-       I have traveled to the most parts of the continental US, Asia and Europe.
-        I can speak in six different languages.</p>
-    </div>
-</body>
+   <head>
+      <link rel="stylesheet" type="text/css" href="css/master.css">
+   </head>
+   <body>
+      <div class="prof-box">
+         <h1>
+         Asmat Muradi</h><br>
+         <img src="./images/Profile_Pic.jpg" class="prof-pic">
+         <h2> My Story </h2>
+         <p> I am a professional software developer and tech enthusiast.
+            I like to solve problems using technology,
+            learn new tools and stay on the edge.
+            Currently, I work full time and pursuing my software engineering degree at HES.
+            I love to travel, try different cuisines and learn to speak different languages.
+         </p>
+      </div>
+      <div class="prof-qoute">
+         <h3>Qoute</h3>
+         <p>
+            <?php
+               $qouteArray = array(
+               ' Alway be yourself and have confidence in yourself - Bruce Lee',
+               'Gineus is 1% inspiration and 99% perspiration - Tomas Edison',
+               'I do believe something radical can happend when you read a good book - J.K. Rowling'
+               );
+               echo $qouteArray[array_rand($qouteArray)];
+               ?>
+         </p>
+      </div>
+   </body>
 </html>
