--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
+<!DOCTYPE html>
 <html>
    <head>
       <link rel="stylesheet" type="text/css" href="css/master.css">
    </head>
    <body>
       <div class="prof-box">
-         <h1>
-         Asmat Muradi</h><br>
-         <img src="./images/Profile_Pic.jpg" class="prof-pic">
-         <h2> My Story </h2>
+         <h1>Asmat Muradi</h1><br>
+         <img src="./images/Profile_Pic.jpg" class="prof-pic" alt="Profile Pic">
+         <h3> My Story </h3>
          <p> I am a professional software developer and tech enthusiast.
             I like to solve problems using technology,
             learn new tools and stay on the edge.
